--- a/main-page.html
+++ b/main-page.html
@@ -13,7 +13,7 @@
       <div class="card">
         <div class="card-info">
           <p class="text-title">Card title</p>
-          <a class="button" href="./bim-model.html">3D Model</a>
+          <a class="button" href="./bim-model/bim-model.html">3D Model</a>
         </div>
       </div>
 
